prevent linebreaks in timestamp columns

--- a/app/public/css/own.css
+++ b/app/public/css/own.css
@@ -248,6 +248,11 @@ th.small-search {
 	white-space: nowrap;
 }
 
+td.iso-date {
+	width: 1%;
+	white-space: nowrap;
+}
+
 .progress {
 	min-width: 100px;
 }
